--- a/css/app.css
+++ b/css/app.css
@@ -5,8 +5,15 @@
 .queries {
     margin-top: 20px;
     margin-left: 20px;
-    padding-right: 20px;
+    padding-right: 10px;
     float: left;
+}
+
+.bottom-right{
+    position: absolute;
+    bottom: 8px;
+    left: 16px;
+    font-size: 18px;
 }
 
 #count {
@@ -14,7 +21,7 @@
     clear: left;
     float: left;
     overflow: auto;
-    margin-top: 50px;
+    margin-top: 0px;
     margin-left: 20px;
     margin-right: 20px;
 }
