--- a/css/app.css
+++ b/css/app.css
@@ -14,6 +14,7 @@
     bottom: 8px;
     left: 16px;
     font-size: 18px;
+    
 }
 
 #count {
@@ -32,16 +33,34 @@
     bottom: 0px;
     right: 0px;
     left: 30%;
+    overflow: auto
 }
 
-.left {
+.legend {
+    background-color: #fff;
+    border-radius: 3px;
+    bottom: 10px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.10);
+    font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    padding: 10px;
     position: absolute;
-    bottom: 0px;
-    top: 0px;
-    left: 0px;
-    width: 30%;
-    min-width: 400px;
+    right: 10px;
+    z-index: 1;
+    display: none
 }
+
+.legend h4 {
+    margin: 0 0 10px;
+}
+
+.legend div span {
+    border-radius: 50%;
+    display: inline-block;
+    height: 10px;
+    margin-right: 5px;
+    width: 10px;
+}
+
 
 .note {
     margin-bottom: 10px;
